# COAT

./: .editorconfig  .gitignore  COAT_Runtime_完整设计_v0.1.md  COAT_Runtime_系统设计_v0.2.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  concern_extraction_bench.py  pointcut_match_bench.py  weaving_bench.py
deploy/: compose.dev.yml  docker-compose.yml
deploy/helm/COAT-runtime/: Chart.yaml  values.yaml
deploy/helm/opencoat-runtime/: Chart.yaml  values.yaml
deploy/kubernetes/: kustomization.yaml  postgres.yaml  runtime-deployment.yaml  runtime-service.yaml
deploy/terraform/: README.md
docs/: 00-overview.md  README.md
docs/07-mvp/: milestones.md  non-goals.md  post-m5-roadmap.md  scope.md
docs/adr/: 0001-concern-as-first-class-unit.md  0002-aop-as-mechanism.md  0003-host-adapter-as-plugin.md  0004-copr-as-prompt-tree.md  0005-runtime-and-daemon-split.md  0006-six-hexagonal-ports.md  0007-jsonl-replay-as-debug-source.md  0008-meta-concern-as-governance.md  0009-packaging-consolidation.md
docs/config/: daemon.yaml.example
docs/design/: v0.1-complete-design.md  v0.2-system-design.md
examples/: README.md
examples/01_simple_chat_agent/: README.md  __init__.py  agent.py  concerns.py  main.py
examples/02_coding_agent_demo/: README.md  __init__.py  agent.py  concerns.py  llm.py  main.py
examples/03_persistent_agent_demo/: README.md  __init__.py  agent.py  concerns.py  main.py
examples/03_research_agent_demo/: README.md
examples/04_openclaw_with_runtime/: README.md  __init__.py  concerns.py  main.py
examples/05_langgraph_with_runtime/: README.md
examples/06_long_running_daemon/: README.md  __init__.py  concerns.py  main.py
integrations/openclaw-opencoat-bridge/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json
integrations/openclaw-opencoat-bridge/scripts/: install-local.sh
integrations/openclaw-opencoat-bridge/src/: daemon.ts  index.ts  injector.ts  types.ts
integrations/opencoat-skill/: .gitignore  DEPLOY.md  README.md  SKILL.md  bootstrap_daemon.sh  concerns.md  inspection.md  rules.md  skill.json
integrations/opencoat-skill/.github/workflows/: deploy-worker.yml  verify.yml
integrations/opencoat-skill/worker/: README.md  package-lock.json  package.json  wrangler.toml
integrations/opencoat-skill/worker/src/: worker.ts
plugins/: README.md
plugins/advisors/example_advisor/: README.md
plugins/matchers/example_matcher/: README.md
plugins/storage/example_storage/: README.md
scripts/: _bump_to_010.py  dev_down.sh  dev_up.sh  format.sh  release.sh  verify.sh
tests/integration/: test_example_coding_agent_demo.py  test_example_long_running_daemon.py  test_example_openclaw_with_runtime.py  test_example_persistent_agent_demo.py  test_example_simple_chat_agent.py  test_workspace_integrity.py
tools/: perf_dashboard.py  schema_check.py
tools/codegen/: gen_types.py
tools/lint/: README.md
