[project]
name = "COAT-runtime-workspace"
version = "0.0.0"
description = "Concern-Oriented Agent Thinking Runtime — workspace root"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "HyperdustLab" }]
# The workspace root is not a publishable package.
# It only depends on its workspace members so `uv sync` installs them all in editable mode.
dependencies = [
  "COAT-runtime-protocol",
  "COAT-runtime-core",
  "COAT-runtime-storage",
  "COAT-runtime-llm",
  "COAT-runtime-host-sdk",
  "COAT-runtime-daemon",
  "COAT-runtime-cli",
  "COAT-runtime-host-plugins",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "jsonschema>=4.21",
  "pyyaml>=6.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
COAT-runtime-protocol     = { workspace = true }
COAT-runtime-core         = { workspace = true }
COAT-runtime-storage      = { workspace = true }
COAT-runtime-llm          = { workspace = true }
COAT-runtime-host-sdk     = { workspace = true }
COAT-runtime-daemon       = { workspace = true }
COAT-runtime-cli          = { workspace = true }
COAT-runtime-host-plugins = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs/", "deploy/", "generated/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501",   # handled by formatter
  "B008",   # function call in default argument is a common pydantic pattern
  "RUF001", # ambiguous unicode in strings: we use × / – intentionally
  "RUF002", # same, in docstrings
  "RUF003", # same, in comments
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B011", "B017"]
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "packages"]
python_files = ["test_*.py"]
# importlib mode lets each test file have its own module name, which
# matters in a monorepo where every package has its own ``tests/`` dir.
addopts = [
  "-q",
  "--strict-markers",
  "--strict-config",
  "--import-mode=importlib",
]
markers = [
  "integration: marks integration tests (deselect with -m 'not integration')",
  "slow: marks slow tests",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
