[project]
name = "opencoat-runtime-workspace"
version = "0.0.0"
description = "Concern-Oriented Agent Thinking Runtime — workspace root"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "HyperdustLabs" }]
# The workspace root is not a publishable package.
# It only depends on its workspace members so `uv sync` installs them all in editable mode.
dependencies = [
  "opencoat-runtime-protocol",
  "opencoat-runtime-core",
  "opencoat-runtime-storage",
  "opencoat-runtime-llm",
  "opencoat-runtime-host-sdk",
  "opencoat-runtime-daemon",
  "opencoat-runtime-cli",
  "opencoat-runtime-host-plugins",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "jsonschema>=4.21",
  "pyyaml>=6.0",
  # Real LLM provider SDKs are dev-only at the workspace level so CI
  # exercises the adapters under mocks. End users still install the
  # provider they want via the package-level optional extras
  # (e.g. ``pip install opencoat-runtime-llm[openai]``).
  "openai>=1.40",
  "anthropic>=0.30",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
opencoat-runtime-protocol     = { workspace = true }
opencoat-runtime-core         = { workspace = true }
opencoat-runtime-storage      = { workspace = true }
opencoat-runtime-llm          = { workspace = true }
opencoat-runtime-host-sdk     = { workspace = true }
opencoat-runtime-daemon       = { workspace = true }
opencoat-runtime-cli          = { workspace = true }
opencoat-runtime-host-plugins = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs/", "deploy/", "generated/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501",   # handled by formatter
  "B008",   # function call in default argument is a common pydantic pattern
  "RUF001", # ambiguous unicode in strings: we use × / – intentionally
  "RUF002", # same, in docstrings
  "RUF003", # same, in comments
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B011", "B017"]
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "packages"]
python_files = ["test_*.py"]
# importlib mode lets each test file have its own module name, which
# matters in a monorepo where every package has its own ``tests/`` dir.
addopts = [
  "-q",
  "--strict-markers",
  "--strict-config",
  "--import-mode=importlib",
]
markers = [
  "integration: marks integration tests (deselect with -m 'not integration')",
  "slow: marks slow tests",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
